--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <section id="tentang" class="pt-24">
+  <section id="tentang" class="pt-24 fade-in-section">
     <div class="container mx-auto p-8 mb-8 bg-white rounded-lg shadow-md">
       <h2 class="text-3xl font-bold mb-6 text-center">About Me</h2>
           
@@ -49,7 +49,7 @@
     </div>
     </section>
 
-  <section id="proyek" class="py-16 w-full">
+  <section id="proyek" class="py-16 w-full fade-in-section">
     <div class="bg-gray-50 py-8 w-full">
       <div class="container mx-auto px-8">
         <h2 class="text-3xl font-bold mb-8 text-center">My Projects</h2>
