--- a/index.html
+++ b/index.html
@@ -9,16 +9,32 @@
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
 
-  <header class="p-4 shadow-md bg-white fixed top-0 left-0 right-0 z-50">
-    <nav class="container mx-auto flex justify-between">
-      <h2 class="font-bold text-xl">Hailrn</h2>
-      <ul class="flex space-x-8">
-        <li><a href="#tentang" class="hover:text-blue-600">About Me</a></li>
-        <li><a href="#proyek" class="hover:text-blue-600">Projects</a></li>
-        <li><a href="#kontak" class="hover:text-blue-600">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
+  <header class="fixed top-0 left-0 right-0 z-50 bg-white p-4 shadow-md">
+  <nav class="container mx-auto flex justify-between items-center">
+    <h2 class="font-bold text-xl">Hailrn</h2>
+
+    <button id="hamburger-button" class="md:hidden text-gray-800">
+      <svg id="menu-icon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+      </svg>
+      <svg id="close-icon" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+      </svg>
+    </button>
+
+    <ul class="hidden md:flex space-x-8">
+      <li><a href="#tentang" class="hover:text-blue-600">About Me</a></li>
+      <li><a href="#proyek" class="hover:text-blue-600">Projects</a></li>
+      <li><a href="#kontak" class="hover:text-blue-600">Contact Me</a></li>
+    </ul>
+  </nav>
+  
+  <div id="mobile-menu" class="md:hidden absolute top-full left-0 w-full bg-white shadow-lg transition-all duration-300 ease-in-out transform opacity-0 -translate-y-4 pointer-events-none">
+    <a href="#tentang" class="block py-2 px-4 text-sm hover:bg-gray-100">About Me</a>
+    <a href="#proyek" class="block py-2 px-4 text-sm hover:bg-gray-100">Projects</a>
+    <a href="#kontak" class="block py-2 px-4 text-sm hover:bg-gray-100">Contact Me</a>
+  </div>
+</header>
 
   <section id="tentang" class="pt-24 fade-in-section">
     <div class="container mx-auto p-8 mb-8 bg-white rounded-lg shadow-md">
