--- a/index.html
+++ b/index.html
@@ -324,6 +324,51 @@
                 </div>
               </div>
 
+              <div class="flex flex-col items-center p-4 bg-gray-800 rounded-lg shadow-md skill-item">
+                <div class="skill-icon-wrapper w-24 h-24 relative">
+                  <svg class="w-full h-full transform -rotate-90" viewBox="0 0 100 100">
+                    <circle class="text-gray-700" stroke-width="8" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                    <circle class="text-white" stroke-width="8" stroke-dasharray="125.6" stroke-dashoffset="94.2" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                    <circle class="text-white" stroke-width="8" stroke-dasharray="125.6" stroke-dashoffset="62.8" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                  </svg>
+                  <img src="MySQL.png" alt="MySQL Logo" class="absolute inset-0 w-12 h-12 m-auto object-contain">
+                </div>
+                <div class="skill-info text-center">
+                  <span class="text-lg font-semibold text-white block">MySQL</span>
+                  <span class="text-sm text-gray-400 block">(Intermediate)</span>
+                </div>
+              </div>
+
+              <div class="flex flex-col items-center p-4 bg-gray-800 rounded-lg shadow-md skill-item">
+                <div class="skill-icon-wrapper w-24 h-24 relative">
+                  <svg class="w-full h-full transform -rotate-90" viewBox="0 0 100 100">
+                    <circle class="text-gray-700" stroke-width="8" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                    <circle class="text-white" stroke-width="8" stroke-dasharray="125.6" stroke-dashoffset="94.2" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                    <circle class="text-white" stroke-width="8" stroke-dasharray="125.6" stroke-dashoffset="62.8" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                  </svg>
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg" alt="PostgreSQL Logo" class="absolute inset-0 w-12 h-12 m-auto object-contain">
+                </div>
+                <div class="skill-info text-center">
+                  <span class="text-lg font-semibold text-white block">PostgreSQL</span>
+                  <span class="text-sm text-gray-400 block">(Intermediate)</span>
+                </div>
+              </div>
+
+              <div class="flex flex-col items-center p-4 bg-gray-800 rounded-lg shadow-md skill-item">
+                <div class="skill-icon-wrapper w-24 h-24 relative">
+                  <svg class="w-full h-full transform -rotate-90" viewBox="0 0 100 100">
+                    <circle class="text-gray-700" stroke-width="8" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                    <circle class="text-white" stroke-width="8" stroke-dasharray="125.6" stroke-dashoffset="94.2" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                    <circle class="text-white" stroke-width="8" stroke-dasharray="125.6" stroke-dashoffset="62.8" stroke="currentColor" fill="transparent" r="40" cx="50" cy="50"></circle>
+                  </svg>
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Microsoft_Office_2013-2019_logo_and_wordmark.svg" alt="Microsoft Office Logo" class="absolute inset-0 w-12 h-12 m-auto object-contain">
+                </div>
+                <div class="skill-info text-center">
+                  <span class="text-lg font-semibold text-white block">Microsoft Office</span>
+                  <span class="text-sm text-gray-400 block">(Intermediate)</span>
+                </div>
+              </div>
+
             </div>
         </div>
     </div>
